5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1601_2425.log
== TEST (2019-03-24 11:34:01) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustível: "))

m = c/d

print(round(m,3))
-- OUTPUT:
0.07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:34:13) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel: "))

m = c/d

print(round(m,3))
-- OUTPUT:
0.07
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:34:39) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel: "))

m = c*d

print(round(m,3), km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(m,3), km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:34:57) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel: "))

m = c*d

print(round(m,3), "km/l")
-- OUTPUT:
57.144 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:36:19) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel: "))

m = d/c

print(round(m,3), "km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:36:27) 
-- CODE:
d = float(input("Distancia: "))
c = float(input("Combustivel: "))

m = d/c

print(round(m,3), "km/l")
-- EXECUTION TIME:
0.11893
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
